# MagicPad

./: CMakeLists.txt  DESCRIPTION  LICENSE  README.md  WELCOME  config.ini  icon.rc  installer.cmake  resources.qrc
CMake/: FindLibUSB.cmake  magicpad-installer.cmake  magicpad-macros.cmake  magicpad-testing.cmake  magicpad-version.cmake
LibUSB-Win32/: README.txt  libusb-win32-changelog-1.2.4.0.txt
LibUSB-Win32/examples/: benchmark.c
artwork/button/: information.xcf
artwork/icon/: hexagon.xcf  hexagon_3d (2).xcf  hexagon_3d.xcf  hexagon_alphabet.xcf  hexagon_back_forth.xcf  hexagon_click.xcf  hexagon_left_part.xcf  hexagon_left_right.xcf  hexagon_quart_bottom_right.xcf  hexagon_quart_top_right.xcf  hexagon_right_part.xcf  hexagon_switch.xcf  hexagon_twist.xcf  hexagon_up_down.xcf  hexagon_up_down_left_right.xcf  icon_alphabet.xcf  icon_bargraph.xcf  icon_bulb.xcf  icon_chessboard.xcf  icon_dj.xcf  icon_fish.xcf  icon_gesture.xcf  icon_home.xcf  icon_itunes.xcf  icon_maps.xcf  icon_music.xcf  icon_opd.xcf  icon_panda.xcf  icon_pictureflow.xcf  icon_purple.xcf  icon_question.xcf  icon_quit.xcf  icon_rollingball.xcf  icon_slideshow.xcf  icon_surface.xcf  icon_switch.xcf  icon_template.xcf  icon_template_black.xcf  icon_template_green.xcf  icon_template_red.xcf  (+6 more)
data/: text.xml
data/maps/: maps.html
doc/ExamplePlugin/: CMakeLists.txt  examplepluginApplet.cpp  examplepluginApplet.h  resources.qrc
drivers/Driver and INF/: MagicPad.inf
drivers/Driver and INF (64bits)/: Thumbs.db
drivers/m64driver/: ISORG_Organic_Multitouch.inf
src/: CMakeLists.txt
src/applets/: CMakeLists.txt  alphabetApplet.cpp  alphabetApplet.h  applet.cpp  applet.h  appletInterface.h  backlightApplet.cpp  backlightApplet.h  bargraphApplet.cpp  bargraphApplet.h  bulbApplet.cpp  bulbApplet.h  djApplet.cpp  djApplet.h  gestureApplet.cpp  gestureApplet.h  imagedisplayApplet.cpp  imagedisplayApplet.h  mapsApplet.cpp  mapsApplet.h  musicApplet.cpp  musicApplet.h  opdApplet.cpp  opdApplet.h  pandaApplet.cpp  pandaApplet.h  pictureflowApplet.cpp  pictureflowApplet.h  pluginApplet.cpp  pluginApplet.h  pongApplet.cpp  pongApplet.h  purpleApplet.cpp  purpleApplet.h  rollingballApplet.cpp  rollingballApplet.h  slideshowApplet.cpp  slideshowApplet.h  surfaceApplet.cpp  surfaceApplet.h  (+10 more)
src/applets/pong/: IAmanager.cpp  IAmanager.h  ball.cpp  ball.h  barIA.cpp  barIA.h  barplayer.cpp  barplayer.h  collisionmanager.cpp  collisionmanager.h  graphicsscene.cpp  graphicsscene.h  prisme.cpp  prisme.h  scoremanager.cpp  scoremanager.h
src/com/: CMakeLists.txt  frameProducer.cpp  frameProducer.h  genericDevice.cpp  genericDevice.h  m64BirDevice.cpp  m64BirDevice.h  magicPad.cpp  magicPad.h  magicPadDevice.cpp  magicPadDevice.h  magicPadFrame.cpp  magicPadFrame.h
src/core/: CMakeLists.txt  actionBar.cpp  actionBar.h  actionButton.cpp  actionButton.h  appletButton.cpp  appletButton.h  connectionDialog.cpp  connectionDialog.h  descriptionText.cpp  descriptionText.h  loggerDialog.cpp  loggerDialog.h  main.cpp  mainwindow.cpp  mainwindow.h  version.h  version.h.cmake
src/filters/: CMakeLists.txt  alphabetFilter.cpp  alphabetFilter.h  calibrationFilter.cpp  calibrationFilter.h  debounceFilter.h  delayFilter.h  doubleClickFilter.cpp  doubleClickFilter.h  filter.cpp  filter.h  fingertipFilter.cpp  fingertipFilter.h  joystickFilter.cpp  joystickFilter.h  meanFilter.cpp  meanFilter.h  objectDetectionFilter.cpp  objectDetectionFilter.h  otsuFilter.cpp  otsuFilter.h  pidFilter.cpp  pidFilter.h  quadrantFilter.cpp  quadrantFilter.h  rotationFilter.cpp  rotationFilter.h  swapFilter.cpp  swapFilter.h  switchFilter.cpp  switchFilter.h
src/filters/Testing/Cpp/: CMakeLists.txt
src/widgets/: CMakeLists.txt  arrowhintWidget.cpp  arrowhintWidget.h  opticalflowWidget.cpp  opticalflowWidget.h  oventimerWidget.cpp  oventimerWidget.h  pictureflow.cpp  surfaceWidget.cpp  surfaceWidget.h  vumeterWidget.cpp  vumeterWidget.h
